--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
+    "base": "/runway-cafe",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
